tests/ui/attributes/positions/used.stderr
error: attribute must be applied to a `static` variable
  --> $DIR/used.rs:7:1
   |
LL | #[used]
   | ^^^^^^^
LL | fn foo() {}
   | ----------- but this is a function

error: attribute must be applied to a `static` variable
  --> $DIR/used.rs:10:1
   |
LL | #[used]
   | ^^^^^^^
LL | struct Foo {}
   | ------------- but this is a struct

error: attribute must be applied to a `static` variable
  --> $DIR/used.rs:13:1
   |
LL | #[used]
   | ^^^^^^^
LL | trait Bar {}
   | ------------ but this is a trait

error: attribute must be applied to a `static` variable
  --> $DIR/used.rs:16:1
   |
LL | #[used]
   | ^^^^^^^
LL | impl Bar for Foo {}
   | ------------------- but this is a implementation block

error: attribute must be applied to a `static` variable
  --> $DIR/used.rs:21:5
   |
LL |     #[used]
   |     ^^^^^^^
LL |     static BAR: i32;
   |     ---------------- but this is a foreign static item

error: aborting due to 5 previous errors

